--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ retrofit = "2.9.0"
 okhttp = "4.12.0"
 hilt-android = "2.50"
 hilt-navigation-compose = "1.1.0"
+timber = "5.0.1"
 
 #App build constants
 android-compile-sdk = "34"
@@ -48,6 +49,7 @@ squareup-okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-android" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
+jakewharton-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
