Add network config to allow the HTTP request Implement the API call to fetch the data

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-baseUrl=http://mobcategories.s3-website-eu-west-1.amazonaws.com/
+baseUrl=http://mobcategories.s3-website-eu-west-1.amazonaws.com
